--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
           </a>
         </li>
         <li>
-          <a href="">Log In</a>
+          <a href="mainWebsite/login.php">Log In</a>
         </li>
         <li class="ads">
-          <a href="">Post Ads</a>
+          <a href="mainWebsite/addproperty.php">Post property</a>
+        </li>
+        <li class="ads">
+          <a href="mainWebsite/addConstruction.php">Post construction</a>
         </li>
       </ul>
       <div class="responsiveMenu">
@@ -107,24 +110,7 @@
     </div>
   </section>
   <!-- End Banner -->
-  <!-- Start Ads Sec -->
-  <section class="ads">
-    <div class="box">
-      <div class="slide-img">
-        <img src="mainWebsite/image/01.jpg" alt="Property">
-      </div>
-      <div class="details-box">
-        <div class="type">
-          <a href="">Any</a>
-          <span>Any 2</span>
-        </div>
-        <div class="price">
 
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Ads Sec -->
   <!-- Start intro sec -->
   <section class="intro">
     <div class="localcontainer">
@@ -278,9 +264,11 @@
     </div>
   </footer>
   <!-- End Footer -->
+  <!-- bootstrap -->
   <script src="mainWebsite/js/jquery-3.6.0.min.js"></script>
   <script src="mainWebsite/js/popper.min.js"></script>
   <script src="mainWebsite/js/bootstrap.min.js"></script>
-  <script src="mainWebsite/js/main.js"></script>
+  <!-- main js -->
+  <script src="mainWebsite/js/main.js" type="module"></script>
 </body>
 </html>
